// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / List Basic ordered list 1`] = `
.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c1 {
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<ol
  className="c0"
>
  <li
    className="c1"
  >
    <span
      className="c2"
    >
      List item 1
    </span>
  </li>
  <li
    className="c1"
  >
    <span
      className="c2"
    >
      List item 2
    </span>
  </li>
  <li
    className="c1"
  >
    <span
      className="c2"
    >
      List item 3
    </span>
  </li>
</ol>
`;

exports[`Storyshots Atoms / List Basic unordered list 1`] = `
.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c1 {
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <span
      className="c2"
    >
      List item
    </span>
  </li>
  <li
    className="c1"
  >
    <span
      className="c2"
    >
      List item
    </span>
  </li>
  <li
    className="c1"
  >
    <span
      className="c2"
    >
      List item
    </span>
  </li>
</ul>
`;

exports[`Storyshots Atoms / List With separators between each li 1`] = `
.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c0 li + li {
  border-top: 1px solid #EBEBE8;
}

.c1 {
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <span
      className="c2"
    >
      List item 1
    </span>
  </li>
  <li
    className="c1"
  >
    <span
      className="c2"
    >
      List item 2
    </span>
  </li>
  <li
    className="c1"
  >
    <span
      className="c2"
    >
      List item 3
    </span>
  </li>
</ul>
`;
